# IntelliGrid-EnergyGuard-AI

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py
data/: DOWNLOAD_INSTRUCTIONS.md
learning/: 01_Python_Basics.ipynb  02_Data_Science_Fundamentals.ipynb  03_Machine_Learning_Basics.ipynb  05_Anomaly_Detection.ipynb
notebooks/: IntelliGrid_EnergyGuard_AI.ipynb
src/: __init__.py  app.py  complete_pipeline.py  complete_pipeline_with_saving.py  model_manager.py  predict_with_saved_models.py
tests/: __init__.py  test_model_manager.py
